fix: break long words instead of horizontal scrolling
For code blocks long words are preserved, but the codeblock can be scrolled horizontally.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -168,3 +168,7 @@ input[type='number'] {
     @apply bg-white;
   }
 }
+
+* {
+  overflow-wrap: anywhere;
+}
